// This source file is part of the Swift.org open source project
//
// Copyright (c) 2020 Apple Inc. and the Swift project authors
// Licensed under Apache License v2.0 with Runtime Library Exception
//
// See http://swift.org/LICENSE.txt for license information
// See http://swift.org/CONTRIBUTORS.txt for the list of Swift project authors

syntax = "proto3";

/// LLBDataID represents the digest of arbitrary data, and its purpose is to be a handler for interfacing with CAS
/// systems. LLBDataID does not require the encoding of any particular hash function. Instead, it is expected that the
/// CAS system itself that provides the digest.
message LLBDataID {
    /// The bytes containing the digest of the contents store in the CAS.
    bytes bytes = 1;
}
